Decreased star rating size and ensured stars will not wrap

--- a/frontend/src/components/rating/Rating.css
+++ b/frontend/src/components/rating/Rating.css
@@ -13,6 +13,8 @@
 
 .rating-stars {
     margin: 0 6px;
+    font-size: 16px;
+    white-space: nowrap;
 }
 
 .rating-text {
